[CSS] Onboarding: fix flexbox wrap on import page

--- a/client/css/sections/onboarding.css
+++ b/client/css/sections/onboarding.css
@@ -38,6 +38,7 @@
 .accountwizard-import {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .accountwizard-import div.backup-password-form {
